# ecs-deplojo

./: .bumpversion.cfg  .editorconfig  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-release.yml  python-test.yml
src/ecs_deplojo/: cli.py  connection.py  deployment.py  exceptions.py  logger.py  main.py  register.py  task_definitions.py  utils.py
tests/: __init__.py  conftest.py  monkeypatch.py  test_connection.py  test_integration.py  test_main.py  test_register.py  test_task_definitions.py  test_utils.py  utils.py
tests/task_definitions/: default.json
