
[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["ecs_deplojo"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = ["ecs_deplojo", "tests", "codegen"]
use_parentheses = true
